<resources>
    <string name="app_name">covid-19 helper</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_toast_label">Toast</string>
    <string name="button_label_Add">Add</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="reset_to_zero">zero</string>
    <string name="to_qr_activity">扫描二维码</string>
    <string name="to_ep_map_activity">查看疫情地图</string>
    <string name="to_guide_activity">防疫贴士</string>
    <string name="to_qr_activity_info">查看和扫描个人疫情防控码</string>
    <string name="to_ep_map_activity_info">查看个人行踪记录图和疫情趋势</string>
    <string name="to_guide_activity_info">查看相关疫情小贴士</string>
    <!-- Sign in -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登陆</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">注册</string>
    <string name="welcome">"欢迎 !  "</string>
    <string name="invalid_username">非法用户名</string>
    <string name="invalid_password">密码必须大于5位字符</string>
    <string name="login_failed">"登陆失败"</string>
    <!-- Sign up   -->
    <string name="title_activity_sign_up">注册</string>
    <string name="action_sign_up">注册</string>
    <!-- OriginalActivity   -->
    <string name="big_title">疫情小助手</string>
    <string name="sign_in_button">登陆</string>
    <string name="sign_up_button">注册</string>
    <string name="be_save">----   be safe   ----</string>
    <string name="washhand_article">
<b>1. 如何正确洗手？</b>\n\n
匆匆地揉搓和冲洗无法清除手上沾染的所有病毒。以下是实现有效洗手的步骤：\n\n
用流动水润湿双手；\n
使用足量的肥皂涂抹双手；\n
仔细揉搓双手各个部位，包括手背、指间和指甲缝，持续至少20秒；\n
用流动水冲净泡沫；\n
用干净的布或一次性毛巾擦干双手。\n\n
<b>2. 洗手的时间多久适宜？</b>\n\n
每次洗手应该至少持续20至30秒。可以利用一些简单的计时方法，比如将《生日快乐歌》唱两遍。
使用免洗洗手液也应遵循同样的时间原则，即使用酒精含量不低于60％的洗手液，用其擦拭双手至少20 秒钟，以确保手的各个部位都能被覆盖到。
<b>3. 何时应洗手？</b>\n\n
为了预防2019冠状病毒病，应确保在以下时间点洗手：\n\n
擤鼻涕、咳嗽或打喷嚏后；\n
用过公共交通工具、去过市场或宗教场所等公共空间后；\n
接触家以外场所物体的表面后，包括触摸钞票后；\n
照顾病人之前、期间和之后；\n
用餐前后。\n\n
通常情况下，应始终在以下时间点洗手：\n\n
如厕之后；\n
用餐前后；\n
接触垃圾后；\n
接触动物或宠物后；\n
更换婴儿尿布或帮孩子如厕后；\n
当手明显变脏时。
    </string>
    <string name="drinkwater_article">
<b>科学饮水的好处</b> \n\n

一是代谢功能。充足的水分有利于及时排出代谢产物，加速血液循环；而缺水加上其他不良生活习惯，容易增加肥胖、肾炎等慢性疾病风险。\n

二是免疫功能。充分饮水能保持呼吸道黏膜湿润，使流感病毒无法迅速繁殖，增强免疫力。\n

三是抗氧化功能。充足的水分有助于提高人体抗氧化功能，去除自由基。\n

有研究指出，女性每天喝足够的水可以让面色红润，皮肤变得更加光滑，可以清洁肠胃，预防便秘。\n\n
<b>喝多少水？什么时间喝？怎么喝水？</b>\n\n
少量多次：一个人每天需要摄入的水量大概是1600毫升左右，每次200毫升左右（1杯），从早到晚适量饮水，不可暴饮。一次性大量饮水会加重胃肠负担，妨碍对食物的消化。此外，运动过后不可立即饮水，要等到心跳趋于平稳时再喝，并且要小口喝，一次喝一点，间隔5分钟后再喝。\n

及时补充：饮水时间应分配在一天中任何时刻，随时喝，不要感到口渴时再喝水。早晨起床后可空腹喝一杯水，饮用一杯水可降低血液黏度，增加循环血容量。 睡觉前一至半小时也可喝一杯水，有利于预防夜间血液黏稠度增加。运动时体内水丢失加快，如果不及时补充会引起水不足。在运动强度较大时，要注意运动中水和矿物质的同时补充，运动后，应根据需要及时补充足量的饮水。\n

选择白开水：廉价、安全、卫生是白开水的优点，而且比起甜饮料，白开水还能避免能量带来的肥胖风险，以及糖过量带来的龋齿、糖尿病等风险。\n\n
    </string>
    <string name="dance_article">
<b>热身</b>\n\n
跑步前的热身运动以动态拉伸为主，如下蹲抱膝、弓箭步蹲、后踢腿、侧压腿等。\n\n
<b>跑鞋</b>\n\n
高足弓、体重偏重者需缓冲性能好的鞋，扁平足者需支撑性能好的鞋，正常足者可折中选择。\n\n
<b>场地</b>\n\n
有条件的话最好选塑胶场地，其次是在公园，尽量避免在较硬的路面长时间跑步。\n\n
<b>姿势</b>\n\n
跑步时要保持头正对前方，肩部适当放松、稳定，以肩为轴前后摆臂。不可左右摇晃或上下起伏过大。慢跑以足中或脚跟着地，快跑以足前掌着地。
<b>强度</b>\n\n
建议锻炼者进行中等强度的跑步，一般指达到有点累、气喘、需费点力才能说话的程度。\n\n
<b>时间</b>\n\n
每次跑步最好持续20~60分钟。每周进行中等强度跑步至少150分钟。在身体允许的条件下，如果你想获得更多运动益处，每周可跑300分钟。\n\n
<b>里程</b>\n\n
日常健身跑，每次以3~5公里为宜。每周里程上限不超过92公里。\n\n
<b>调节</b>\n\n
跑步者要通过呼吸、心跳、疲劳感、肌肉和关节的酸痛反应等调整运动节奏。 \n\n
    </string>
    <string name="mask_article">
<b>口罩选择及注意事项</b>\n\n
口罩的正确使用、储存和清洁是保持其有效性的关键。建议公众选用一次性使用医用口罩、医用外科口罩或以上防护级别口罩，并遵守以下规定：\n\n
1. 正确佩戴口罩，确保口罩盖住口鼻和下巴，鼻夹要压实；\n
2. 口罩出现脏污、变形、损坏、异味时需及时更换，每个口罩累计佩戴时间不超过8小时；\n
3. 在跨地区公共交通工具上，或医院等环境使用过的口罩不建议重复使用；\n
4. 需重复使用的口罩在不使用时宜悬挂于清洁、干燥、通风处；\n
5. 戴口罩期间如出现憋闷、气短等不适，应立即前往空旷通风处摘除口罩；\n
6. 外出要携带备用口罩，存放在原包装袋或干净的存放袋中，避免挤压变形，废弃口罩归为其他垃圾处理；\n
7. 建议家庭存留少量颗粒物防护口罩*、医用防护口罩备用。
    </string>
    <string name="stayhome_article">
<b>如何使你的环境更安全</b>\n\n
<i>避免封闭、拥挤或涉及近距离接触的空间。</i>\n
以下这种情形出现过疫情：人们在拥挤的室内环境（餐馆、合唱团练习场、健身班、夜总会、办公室和礼拜场所）中聚集并高声交谈、大喊大叫、喘粗气或唱歌。\n
在拥挤和通风不良的空间中感染COVID-19的风险更高，因为感染者会长时间近距离呆在一起。在这些环境中，病毒似乎可以通过呼吸道飞沫或气溶胶更有效地传播，因此采取预防措施就更加重要。\n
<i>和人在外面见面</i>\n
室外聚会比室内聚会更安全，尤其是在室内空间狭小且没有室外空气进入的情况下。\n
有关如何举办家庭聚会、儿童足球比赛和家庭聚会等活动的更多信息，请阅读我们关于小型公众聚会的问答。\n
<i>避免拥挤和室内，如果不能做到，就要采取预防措施</i>\n
在室内时打开窗户，增加室内自然通风量。\n
世卫组织已经为一般公众和管理公共空间和建筑物的人们发布关于通风和空气调节的问答。
    </string>
    <string name="logout_title">确定退出登录吗？</string>
    <string name="logout_text">之后您需要重新登录或注册才能使用本应用</string>
    <string name="logout_cancel">我再想想</string>
    <string name="logout_accept">确定退出</string>

</resources>