<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OriginalActivity">

    <TextView
        android:id="@+id/big_title"
        android:layout_width="309dp"
        android:layout_height="105dp"
        android:layout_marginTop="204dp"
        android:text="@string/big_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginTop="136dp"
        android:text="@string/sign_up_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_title" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in_button"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/be_save"
        android:layout_width="163dp"
        android:layout_height="22dp"
        android:layout_marginBottom="32dp"
        android:text="@string/be_save"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>